# ShipGo

./: README.md
auth/: .env  Dockerfile  pyproject.toml
auth/app/: config.py  main.py
auth/app/crud/: drivers.py  users.py
auth/app/models/: drivers.py  users.py
auth/app/routes/: auth.py
auth/app/schemas/: drivers.py  users.py
auth/app/utils/: custom_response.py  distributed_id_generator.py  hashing.py  jwt.py
bookings/: config.py  kafka_consumer.py  kafka_producer.py  main.py  model.py  requriements.txt  schemas.py  utils.py
location/: kafka_consumer.py  kafka_producer.py  main.py  requriments.txt  utils.py
shipgo-frontend/: package-lock.json  package.json  server.js
shipgo-frontend/hooks/: useSSE.ts  useWebSocket.ts
shipgo-frontend/src/app/: page.tsx
shipgo-frontend/src/app/driver/: page.tsx
shipgo-frontend/src/app/user/: layout.tsx  page.tsx
shipgo-frontend/src/app/user/add/: page.tsx
shipgo-frontend/src/app/user/track/[id]/: page.tsx
shipgo-frontend/src/components/: DriverHome.jsx
shipgo-frontend/src/components/user/: LocationTracker.tsx  LocationTrackerDriver.tsx  PlaceOrderMaps.jsx  TrackSSE.tsx  UserSideBar.tsx
